# advent-of-code

./: .gitignore  Cargo.toml
.devcontainer/: devcontainer.json
aoc/: Cargo.toml
aoc-downloader/: Cargo.toml
aoc-downloader/src/: main.rs
aoc/src/: lib.rs  main.rs
aoc/src/y2023/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs
aoc/src/y2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc/src/y2025/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  mod.rs
grid/src/: lib.rs
src/: lib.rs
y2024/: Cargo.toml  build.rs
y2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  lib.rs  main.rs
