[package]
name = "aoc-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
reqwest = { version = "0.12.24", features = ["cookies"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
