[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env", "cargo"] }
grid = { version = "0.1.0", path = "../grid" }
inventory = "0.3.15"
priority-queue = "2.1.1"
regex = "1.11.1"
scan_fmt = "0.2.6"

[build-dependencies]
regex = "1.11.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
